##################################################
# Externals:
##################################################

find_package(Threads)

##################################################
# Libraries:
##################################################

include(Libraries.cmake)

##################################################
# Executables:
##################################################

add_executable(Test Test.cpp)
target_link_libraries(Test mm_can)
